[tool.poetry]
name = "interlocking"
version = "2.0"
description = "A simple yaramo-based interlocking logic"
authors = ["OSMHPI <arne.boockmeyer@hpi.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
yaramo = { git = "https://github.com/simulate-digital-rail/yaramo" }
planpro-importer = { git = "https://github.com/simulate-digital-rail/planpro-importer" }
railway-route-generator = { git = "https://github.com/simulate-digital-rail/railway-route-generator" }
#yaramo = { git = "https://github.com/bp2022-ap1/yaramo", branch="refactor/replace-connected-nodes-with-edges" }
#planpro-importer = { git = "https://github.com/bp2022-ap1/planpro-importer", branch = "refactor/replace-connected-nodes-edges" }
#railway-route-generator = { git = "https://github.com/bp2022-ap1/railway-route-generator", branch = "refactor/replace-connected-nodes-edges" }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
