[tool.poetry]
name = "interlocking"
version = "2.0.1"
description = "A simple yaramo-based interlocking logic"
authors = ["Arne Boockmeyer <arne.boockmeyer@hpi.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
yaramo = { git = "https://github.com/simulate-digital-rail/yaramo" }
planpro-importer = { git = "https://github.com/simulate-digital-rail/planpro-importer" }
railway-route-generator = { git = "https://github.com/simulate-digital-rail/railway-route-generator" }
interlocking-logic-monitor = { git = "https://github.com/simulate-digital-rail/interlocking-logic-monitor" }
#yaramo = { git = "https://github.com/bp2022-ap1/yaramo", branch="refactor/replace-connected-nodes-with-edges" }
#planpro-importer = { git = "https://github.com/bp2022-ap1/planpro-importer", branch = "refactor/replace-connected-nodes-edges" }
#railway-route-generator = { git = "https://github.com/bp2022-ap1/railway-route-generator", branch = "refactor/replace-connected-nodes-edges" }

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
planpro-importer = {git = "https://github.com/simulate-digital-rail/planpro-importer"}
pylint = "^2.15.10"
black = "^22.12.0"
pre-commit = "^3.0.0"
coverage = "^7.2.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
